--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -47,3 +47,9 @@ body .full-width {
     overflow: hidden;
     overflow-x: auto;
 }
+
+.GitBtn {
+    background-color: var(--primary-color);
+    border-radius: 25px;
+    color: var(--white-color) !important;
+}
